--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,13 +1,7 @@
-
 // Colors
-$blue: #892cdc;
-$dark-blue: #222831;
-$light-grey: #f4f5f7;
-$grey: #a6a9b6;
+$text-dark: #847F7D;
+$text-white: #FFFEFC;
+$orange: #FF6C3D;
+$dark: #1C1B19;
 
-$box-shadow: 0 0 7px 0 rgba(0,0,0,.2);
-
-$font: 'Rubik', sans-serif;
-
-
-
+$font: 'Inter', sans-serif;
