--- a/src/assets/scss/_template.scss
+++ b/src/assets/scss/_template.scss
@@ -1,6 +1,9 @@
 html,
 body {
     font-family: $font;
+    background-color: $dark;
+    color: $text-white;
+
     &::-webkit-scrollbar {
         display: none;
     }
@@ -13,10 +16,11 @@ ul {
 }
 
 a {
-    color: $blue;
+    color: $text-dark;
     transition: 300ms ease;
+
     &:hover {
-        color: darken($color: $blue, $amount: 20);
+        color: lighten($color: $text-dark, $amount: 20);
         text-decoration: none;
     }
 }
@@ -34,6 +38,7 @@ img {
     width: 100%;
     height: auto;
 }
+
 h1,
 h2,
 h3,
@@ -41,33 +46,23 @@ h4,
 h5,
 h6 {
     line-height: 1.3;
-    margin-bottom: 0.6em;
+    margin-bottom: 0;
 }
 
 h1 {
-    font-size: 50px;
-
-    @include laptop {
-        font-size: 42px;
-    }
-
-    @include mobile {
-        font-size: 32px;
-    }
+    font-size: 42px;
 }
+
 h2 {
-    font-size: 40px;
+    font-size: 36px;
 }
+
 h3 {
     font-size: 30px;
+}
 
-    @include laptop {
-        font-size: 26px;
-    }
-
-    @include mobile {
-        font-size: 20px;
-    }
+h4 {
+    font-size: 24px;
 }
 
 input,
@@ -75,6 +70,7 @@ textarea {
     width: 100%;
     border: none;
     padding: 5px 15px;
+
     &:focus {
         outline: none;
         border: none;
@@ -91,8 +87,4 @@ button {
         outline: none;
         border: none;
     }
-}
-
-.svg-icon {
-    fill: $blue;
 }
