--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,4 +4,5 @@ $text-white: #FFFEFC;
 $orange: #FF6C3D;
 $dark: #1C1B19;
 
-$font: 'Inter', sans-serif;
+$font-inter: 'Inter', sans-serif;
+$font-roboto: 'Roboto', sans-serif;
