--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -16,7 +16,122 @@
     }
 }
 
-.steps{
+.steps {
     padding-top: 40px;
     padding-bottom: 40px;
+
+    &__block {
+        margin-top: 40px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__card {
+        width: 32.5%;
+        padding: 20px;
+        border-radius: 20px;
+        background: linear-gradient(91deg, rgba(51, 50, 49, 0.35) 0%, rgba(79, 79, 79, 0.17) 63.74%, rgba(51, 49, 44, 0.35) 101.17%);
+
+
+
+        &_title {
+            font-size: 36px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            &_block {
+                position: relative;
+            }
+
+            &_num {
+                position: absolute;
+                left: 50%;
+                top: 40%;
+                transform: translate(-50%, -50%);
+                line-height: 1;
+            }
+
+            &_img {
+                width: 58px;
+            }
+
+            &_text {
+                font-size: 36px;
+                font-weight: 700;
+            }
+        }
+
+        &_content {
+            margin-top: 10px;
+
+            &_text {
+                font-size: 16px;
+                color: $text-dark;
+                font-weight: 400;
+                line-height: 1.75;
+            }
+
+            &_unique {
+                display: block;
+                font-size: 16px;
+                color: $orange;
+                font-weight: 700;
+            }
+        }
+    }
+}
+
+.activate {
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    &-card {
+        width: 32.5%;
+        display: flex;
+        flex-direction: column;
+        border-radius: 20px;
+        border: 1px solid #55473E;
+        background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
+        box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
+        padding: 20px;
+
+        &__img {
+            display: flex;
+            height: 210px;
+            object-fit: contain;
+        }
+
+        &__title {
+            font-size: 24px;
+            font-weight: 500;
+            text-align: center;
+        }
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            &_item {
+                display: flex;
+                align-items: center;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 500;
+            }
+
+            &_img {
+                width: 20px;
+                height: 20px;
+            }
+        }
+
+        &__text {}
+
+        &__subtext {}
+    }
 }
