--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1,7 +1,88 @@
-.container{
+.container {
     width: 100%;
     max-width: 1250px;
     margin-left: auto;
     margin-right: auto;
     padding: 0 20px;
+}
+
+
+.list-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 15px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.75;
+
+    &__img {
+        margin-top: 4px;
+        width: 18px;
+        height: 18px;
+    }
+
+    .text-grey {
+        font-size: 16px;
+        font-weight: 400;
+        color: $text-dark;
+    }
+
+    .text-white {
+        font-size: 16px;
+        font-weight: 500;
+        color: $text-white;
+    }
+
+}
+
+.accordion {
+    width: 100%;
+    max-width: 500px;
+    overflow: hidden;
+    margin-top: 20px;
+    background-color: #2c3e50;
+
+    &__intro {
+        position: relative;
+        padding: 20px;
+        cursor: pointer;
+    }
+
+    &__content {
+        padding: 0 20px;
+        max-height: 0;
+        overflow: hidden;
+        will-change: max-height;
+        transition: all 0.25s ease-out;
+        color: #f1f1f1;
+        opacity: 0;
+    }
+
+    h4,
+    p {
+        margin: 0;
+        line-height: 1;
+    }
+
+    h4 {
+        color: #fff;
+        font-size: 26px;
+        font-weight: 500;
+    }
+
+    p {
+        color: #f1f1f1;
+        font-size: 15px;
+        margin: 0;
+    }
+
+    &__active {
+        .accordion__intro {}
+
+        .accordion__content {
+            padding: 0 20px 20px;
+            opacity: 1;
+        }
+    }
 }
