--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -37,52 +37,114 @@
 }
 
 .accordion {
-    width: 100%;
-    max-width: 500px;
-    overflow: hidden;
-    margin-top: 20px;
-    background-color: #2c3e50;
+    border-radius: 8px;
+    border: 1px solid #55473E;
+    background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
+    box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
 
     &__intro {
         position: relative;
-        padding: 20px;
+        color: $text-dark;
+        font-size: 20px;
+        font-weight: 700;
         cursor: pointer;
+        padding: 15px 20px 15px 25px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        &_icon {
+            width: 38px;
+            height: 28px;
+            object-fit: contain;
+            display: flex;
+
+            &_active {
+                display: none;
+                width: 38px;
+                height: 28px;
+                object-fit: contain;
+            }
+        }
     }
 
     &__content {
-        padding: 0 20px;
+        padding: 0 25px;
         max-height: 0;
         overflow: hidden;
         will-change: max-height;
         transition: all 0.25s ease-out;
-        color: #f1f1f1;
         opacity: 0;
-    }
-
-    h4,
-    p {
-        margin: 0;
-        line-height: 1;
-    }
-
-    h4 {
-        color: #fff;
-        font-size: 26px;
-        font-weight: 500;
-    }
-
-    p {
-        color: #f1f1f1;
-        font-size: 15px;
-        margin: 0;
+        border-top: 1px solid #51443B;
     }
 
     &__active {
-        .accordion__intro {}
+        .accordion__intro {
+            border-bottom: 1px solid #1E1C18;
+        }
+
+        .accordion__intro_icon {
+            display: none;
+        }
+
+        .accordion__intro_icon_active {
+            display: flex;
+        }
 
         .accordion__content {
-            padding: 0 20px 20px;
+            padding: 20px 25px;
             opacity: 1;
         }
+    }
+}
+
+.copy-block {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+
+    &__overlay {
+        width: 100%;
+        border-radius: 8px;
+        border: 1px solid #55473E;
+        background: linear-gradient(91deg, rgba(43, 40, 35, 0.76) 0%, rgba(39, 37, 31, 0.76) 63.74%, rgba(44, 42, 39, 0.76) 101.17%);
+        backdrop-filter: blur(2px);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 2;
+        top: -50%;
+        left: 0;
+        font-size: 10px;
+        color: $text-dark;
+        padding: 15px;
+    }
+
+    &__icon {
+        min-width: 22px;
+    }
+
+    &__btn {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        font-size: 16px;
+        color: $text-dark;
+        font-weight: 500;
+        transition: 300ms ease;
+        padding-left: 30px;
+
+        &:hover {
+            filter: brightness(10);
+        }
+    }
+
+    &__text {
+        width: 100%;
     }
 }
