--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -196,11 +196,10 @@
 }
 
 .vpns {
-
-
     &__block {
         display: flex;
         flex-wrap: wrap;
+        gap: 4%;
     }
 
     &__paid {
@@ -215,5 +214,53 @@
         font-size: 36px;
         font-weight: 700;
         color: $text-dark;
+        margin-bottom: 20px;
     }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    &__info{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+}
+
+.vpn-info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    &__step {
+        position: relative;
+
+        &_border {
+            width: 29px;
+        }
+
+        &_num {
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    &__text {
+        color: $text-dark;
+    }
+}
+
+.vpn-steps {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 30px;
 }
