--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -223,17 +223,19 @@
         gap: 12px;
     }
 
-    &__info{
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-    }
 }
 
 .vpn-info {
     display: flex;
-    align-items: center;
-    gap: 20px;
+    flex-direction: column;
+    gap: 25px;
+
+
+    &__item {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
 
     &__step {
         position: relative;
@@ -258,9 +260,23 @@
     }
 }
 
+.vpn-text {
+    font-size: 12px;
+    font-weight: 400;
+    color: $text-dark;
+    line-height: 1.3;
+}
+
 .vpn-steps {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-bottom: 30px;
+}
+
+.faq {
+    &__block {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
