--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -280,3 +280,92 @@
         gap: 10px;
     }
 }
+
+.pre-order {
+    &__block {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__time {
+        position: relative;
+        width: 48%;
+        border-radius: 20px;
+        overflow: hidden;
+
+        &_bg {
+            position: relative;
+        }
+
+        &_overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(28, 27, 25, 0.91) 66.5%);
+        }
+
+        &_block {
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            padding: 28px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 100%;
+            width: 100%;
+        }
+
+        &_img {
+            height: 460px;
+            object-fit: cover;
+        }
+
+        &_pretitle {
+            font-size: 14px;
+            line-height: 1;
+            margin-bottom: 5px;
+        }
+
+        &_title {
+            font-size: 32px;
+            font-weight: 600;
+            line-height: 1.3;
+            margin-bottom: 5px;
+        }
+
+        &_subtitle {
+            font-size: 14px;
+            color: $text-dark;
+            line-height: 1;
+        }
+
+        &_pretitle {}
+    }
+
+    &__btn {
+        padding: 20px;
+        border-radius: 14.5px;
+        border: 1px solid var(--text-Dark, #847F7D);
+        background: linear-gradient(270deg, #4F4F4F 0%, #483C36 31.28%, #46423F 48.78%, #483C36 70.71%, #4F4F4F 100%);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1;
+        color: $text-white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        max-width: 270px;
+    }
+
+    &__contact {}
+
+    &__links {}
+
+    &__email {}
+}
