--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -399,3 +399,16 @@
         margin-top: 18px;
     }
 }
+
+.payment {
+    &__title {}
+
+    &__block {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__icon {
+        height: 61px;
+    }
+}
