--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,15 @@
 <header class="header">
+    <!-- Left Shapes -->
+    <div class="header__shape-1"></div>
+    <div class="header__shape-2"></div>
+    <div class="header__shape-3"></div>
+    <div class="header__circle-1"></div>
+
+    <!-- Right Shapes -->
+    <div class="header__shape-4"></div>
+    <div class="header__shape-5"></div>
+    <div class="header__shape-6"></div>
+    <div class="header__circle-2"></div>
     <div class="container">
         <div class="header__block">
             <div class="header__logo">
