--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,13 @@
     <div class="container">
         <div class="header__block">
             <div class="header__logo">
-                <button class="header__logo_menu"></button>
+
+                <button class="hamburger hamburger--squeeze js-hamburger header__logo_menu" type="button">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+
                 <a class="header__logo_link" href="#">Logotype</a>
             </div>
             <div class="header__menu">
