--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,13 +3,12 @@
     <div class="header__shape-1"></div>
     <div class="header__shape-2"></div>
     <div class="header__shape-3"></div>
-    <div class="header__circle-1"></div>
 
     <!-- Right Shapes -->
     <div class="header__shape-4"></div>
     <div class="header__shape-5"></div>
     <div class="header__shape-6"></div>
-    <div class="header__circle-2"></div>
+
     <div class="container">
         <div class="header__block">
             <div class="header__logo">
@@ -31,6 +30,13 @@
             <div class="header__lang">
                 <button type="button" class="header__lang_button">
                     <img class="header__lang_img" src="assets/images/ru.svg" alt="">
+                    <div class="header__lang_dots">
+                        <svg width="5" height="21" viewBox="0 0 5 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="2.5" cy="2.5" r="2.5" fill="#D9D9D9" />
+                            <circle cx="2.5" cy="10.5" r="2.5" fill="#D9D9D9" />
+                            <circle cx="2.5" cy="18.5" r="2.5" fill="#D9D9D9" />
+                        </svg>
+                    </div>
                 </button>
                 <div class="header__lang_dropdown">
                     <a href="#" class="header__lang_link">
