--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -73,10 +73,10 @@
         width: 340px;
         height: 340px;
         position: absolute;
-        top: -170px;
+        top: -130px;
         left: 0;
         filter: blur(500px);
-        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.35) -88.391%, rgba(255, 108, 61, 0.35) 99.995%);
+        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.45) -88.391%, rgba(255, 108, 61, 0.45) 99.995%);
         border-radius: 50%;
     }
 
@@ -84,10 +84,10 @@
         width: 340px;
         height: 340px;
         position: absolute;
-        top: -170px;
+        top: -130px;
         right: 0;
         filter: blur(500px);
-        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.35) -88.391%, rgba(255, 108, 61, 0.35) 99.995%);
+        background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.45) -88.391%, rgba(255, 108, 61, 0.45) 99.995%);
         border-radius: 50%;
     }
 
@@ -100,6 +100,10 @@
     }
 
     &__logo {
+        display: flex;
+        align-items: center;
+        gap: 30px;
+
         &_link {
             font-size: 32px;
             color: $text-white;
@@ -145,23 +149,51 @@
             display: flex;
             flex-direction: column;
             gap: 5px;
+            opacity: 0;
+            visibility: hidden;
+            transition: 200ms ease;
+
+            &.active {
+                opacity: 1;
+                visibility: visible;
+            }
         }
 
         &_link {
+            width: 90px;
             display: flex;
+            justify-content: center;
+            align-items: center;
             padding: 1px 20px;
             border-radius: 12px;
             border: 1px solid #55473E;
             background: linear-gradient(91deg, #534F46 0%, #27251F 63.74%, #534F48 101.17%);
             box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
+
+            &:hover {
+                background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
+            }
         }
 
         &_button {
-            padding: 1px 20px;
+            width: 90px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+            padding: 1px 15px;
             border-radius: 12px;
             border: 1px solid #55473E;
             background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
             box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
+
+            &:focus {
+                border: 1px solid #55473E;
+            }
+
+            &:hover {
+                background: rgba(0, 0, 0, 0.436);
+            }
         }
 
         &_img {
@@ -172,8 +204,7 @@
 
 
 .hamburger {
-    padding: 15px 15px;
-    display: inline-block;
+    display: flex;
     cursor: pointer;
     transition-property: opacity, filter;
     transition-duration: 0.15s;
@@ -187,22 +218,14 @@
     overflow: visible;
 }
 
-.hamburger:hover {
-    opacity: 0.7;
-}
-
-.hamburger.is-active:hover {
-    opacity: 0.7;
-}
-
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-    background-color: #000;
+    background-color: $orange;
 }
 
 .hamburger-box {
-    width: 40px;
+    width: 30px;
     height: 24px;
     display: inline-block;
     position: relative;
@@ -217,9 +240,9 @@
 .hamburger-inner,
 .hamburger-inner::before,
 .hamburger-inner::after {
-    width: 40px;
+    width: 30px;
     height: 4px;
-    background-color: #000;
+    background-color: white;
     border-radius: 4px;
     position: absolute;
     transition-property: transform;
@@ -234,11 +257,17 @@
 }
 
 .hamburger-inner::before {
-    top: -10px;
+    width: 23px;
+    top: -8px;
 }
 
 .hamburger-inner::after {
-    bottom: -10px;
+    bottom: -8px;
+    width: 26px;
+}
+
+.hamburger.is-active .hamburger-inner::after {
+    width: 30px;
 }
 
 
