--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -1,6 +1,9 @@
 .header {
     position: fixed;
     width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
     top: 0;
     z-index: 10;
     background-color: #2B2824;
@@ -116,6 +119,10 @@
         display: flex;
         align-items: center;
         gap: 30px;
+
+        @include netbook {
+            display: none;
+        }
 
         &_item {
             font-size: 20px;
