--- a/src/assets/scss/sections/_footer.scss
+++ b/src/assets/scss/sections/_footer.scss
@@ -69,6 +69,10 @@
         font-weight: 400;
         margin-bottom: 12px;
         line-height: 1;
+
+        @include netbook {
+            text-align: center;
+        }
     }
 
     &__block {
@@ -77,7 +81,7 @@
     }
 
     &__icon {
-        width: 92px;
+        height: 61px;
     }
 
     &__item {
@@ -130,6 +134,12 @@
         display: flex;
         justify-content: space-between;
         padding: 20px 0;
+        gap: 20px;
+
+        @include netbook {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__menu {
@@ -153,10 +163,18 @@
     }
 
     &__brands {
-        display: flex;
-        gap: 40px;
         margin-top: 30px;
         margin-bottom: 60px;
+
+        .swiper-wrapper {
+            @include netbook {
+                justify-content: center;
+            }
+        }
+
+        .swiper-slide {
+            width: auto;
+        }
     }
 
     &__brand {
@@ -173,7 +191,9 @@
 
     &__block {
         display: flex;
+        align-items: center;
         justify-content: space-between;
+        gap: 30px;
     }
 
     &__text {
@@ -186,8 +206,17 @@
 
     &__links {
         display: flex;
-        gap: 28px;
+        flex-wrap: wrap;
+        gap: 20px 28px;
     }
 
     &__link {}
+}
+
+
+.footerSwiper {
+    .swiper-slide {
+        display: flex;
+        justify-content: center;
+    }
 }
