--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,16 +2,21 @@
     <div class="container-fluid payment-footer">
         <div class="container">
             <div class="payment-footer__title">Способы оплаты</div>
-            <div class="payment-footer__block">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/visa.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/mastercard.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/web-money.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/robokassa.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/paypal-2.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/google-pay.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/qiwi.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/bitcoin.svg" alt="">
-                <img class="payment-footer__icon" src="assets/images/icons/payment-methods/stripe.svg" alt="">
+            <!-- Swiper -->
+            <div class="swiper footerPaySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/visa.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/mastercard.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/web-money.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/robokassa.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/paypal-2.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/google-pay.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/yandex.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/apple-pay.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/qiwi.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/bitcoin.svg" alt=""></div>
+                    <div class="swiper-slide"><img class="payment-footer__icon" src="assets/images/icons/payment-methods/stripe.svg" alt=""></div>
+                </div>
             </div>
         </div>
     </div>
@@ -82,11 +87,13 @@
                             </a>
                         </div>
                     </div>
-                    <div class="footer-contact__brands">
-                        <img src="assets/images/valve.svg" alt="" class="footer-contact__brand">
-                        <img src="assets/images/blizzard.svg" alt="" class="footer-contact__brand">
-                        <img src="assets/images/sega.svg" alt="" class="footer-contact__brand">
-                        <img src="assets/images/ubisoft.svg" alt="" class="footer-contact__brand">
+                    <div class="footer-contact__brands swiper footerBrandSwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/images/valve.svg" alt="" class="footer-contact__brand"></div>
+                            <div class="swiper-slide"><img src="assets/images/blizzard.svg" alt="" class="footer-contact__brand"></div>
+                            <div class="swiper-slide"><img src="assets/images/sega.svg" alt="" class="footer-contact__brand"></div>
+                            <div class="swiper-slide"><img src="assets/images/ubisoft.svg" alt="" class="footer-contact__brand"></div>
+                        </div>
                     </div>
                 </div>
             </div>
